--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,8 +11,8 @@
 
 
 ### example 2
-# associer un niveau de debugà deux appenders nommées stdput et file 
-log4j.rootLogger=WARN, stdout, file
+# associer un niveau de debug à deux appenders nommées stdout et file
+log4j.rootLogger=INFO, stdout, file
 # puis spécifier la nature de l'appender ( =flux de sortie )
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 # e spécifier le layout = le format de sortie du msg  assoicé 
@@ -21,11 +21,11 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%-5p] (%F:%M:%L) %m%n
 # de meme pour l'appender file 
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=C:\\log4j-application.log
+log4j.appender.file.File=my_log.log
+# This property denotes the number of backup files to be created. Default value is 1.
 log4j.appender.file.MaxFileSize=5MB
+#This is the critical size of the file above which the file will be rolled. Default value is 10 MB.
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d [%-5p] (%F:%M:%L) %m%n
-
-
 
